syntax = "proto3";
package payments;

service Bitcoin {
    rpc SendPayment (BtcPaymentRequest) returns (BtcPaymentResponse);
}

message BtcPaymentRequest {
   string from_addr = 1;
   string to_addr = 2;
   uint32 amount = 3;
}

message BtcPaymentResponse {
    bool successful = 1;
    string message = 2;
}
